--- a/django_project/budget_buddy/templates/visualize/pages/forms.html
+++ b/django_project/budget_buddy/templates/visualize/pages/forms.html
@@ -11,26 +11,27 @@
 
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
+    {% load staticfiles%}
     <!-- Bootstrap Core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{%static "vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="{%static "vendor/metisMenu/metisMenu.min.css" %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="{%static "dist/css/sb-admin-2.css" %}" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="../vendor/morrisjs/morris.css" rel="stylesheet">
+    <link href="{%static "vendor/morrisjs/morris.css" %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{%static "vendor/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css" %}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js" %}"></script>
+        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js" %}"></script>
     <![endif]-->
 
 </head>
@@ -66,7 +67,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifendstatic.</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -78,7 +79,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifendstatic.</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -90,7 +91,7 @@
                                         <em>Yesterday</em>
                                     </span>
                                 </div>
-                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifend...</div>
+                                <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pellentesque eleifendstatic.</div>
                             </a>
                         </li>
                         <li class="divider"></li>
@@ -267,7 +268,7 @@
                     <ul class="nav" id="side-menu">
                         <li class="sidebar-search">
                             <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
+                                <input type="text" class="form-control" placeholder="Searchstatic.">
                                 <span class="input-group-btn">
                                 <button class="btn btn-default" type="button">
                                     <i class="fa fa-search"></i>
@@ -277,7 +278,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="/index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-credit-card fa-fw"></i> Cards<span class="fa arrow"></span></a>
@@ -305,7 +306,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h1 class="page-header">Plan your Budget</h1>
-                    <div><h5>Make sure you won't spend more than what you can!..Introducing a new system to alert you whenever you spend more than your specified limits.</h5> </div>
+                    <div><h5>Make sure you won't spend more than what you can!staticIntroducing a new system to alert you whenever you spend more than your specified limits.</h5> </div>
                     <br>
                 </div>
                 <!-- /.col-lg-12 -->
@@ -321,56 +322,56 @@
                             <div class="row">
                                 <div class="col-lg-3"></div>
                                 <div class="col-lg-6">
-                                    <form role="form">
-                                        <span><i class="fa fa-cutlery"></i><label>&nbsp;Dining:</label></span>
+                                    <form role="form" action="/plan-budget/" method="post">
+                                        <span><i class="fa fa-cutlery"></i><label for="dining">&nbsp;Dining:</label></span>
                                         <div class="form-group input-group">
 
                                             <span class="input-group-addon">$</span>
-                                            <input type="text" name = "dining" class="form-control">
+                                            <input id="dining" type="text" name = "dining" class="form-control">
                                             <span class="input-group-addon">.00</span>
-                                        
-                                            
+
+
                                         </div>
-                                        <span><i class="fa fa-male"></i><label>&nbsp;Clothing:</label></span>
+                                        <span><i class="fa fa-male"></i><label for="clothing">&nbsp;Clothing:</label></span>
                                         <div class="form-group input-group">
 
                                             <span class="input-group-addon">$</span>
-                                            <input type="text" name = "clothing" class="form-control">
+                                            <input id="clothing" type="text" name = "clothing" class="form-control">
                                             <span class="input-group-addon">.00</span>
-                                        
-                                            
+
+
                                         </div>
-                                          <span><i class="fa fa-fire"></i><label>&nbsp;Gas:</label></span>
+                                          <span><i class="fa fa-fire"></i><label for="gas">&nbsp;Gas:</label></span>
                                         <div class="form-group input-group">
 
                                             <span class="input-group-addon">$</span>
-                                            <input type="text" name = "gas" class="form-control">
+                                            <input id="gas" type="text" name = "gas" class="form-control">
                                             <span class="input-group-addon">.00</span>
-                                        
-                                            
+
+
                                         </div>
-                                        
-                                         <span><i class="fa fa-bars"></i><label>&nbsp;Others:</label></span>
+
+                                         <span><i class="fa fa-bars"></i><label for="others">&nbsp;Others:</label></span>
                                         <div class="form-group input-group">
 
                                             <span class="input-group-addon">$</span>
-                                            <input type="text" name = "others" class="form-control">
+                                            <input id="others" type="text" name = "others" class="form-control">
                                             <span class="input-group-addon">.00</span>
-                                        
-                                            
+
+
                                         </div>
-                                       <span><i class="fa fa-dollar"></i><label>&nbsp;Total:</label></span>
+                                       <span><i class="fa fa-dollar"></i><label for="total">&nbsp;Total:</label></span>
                                         <div class="form-group input-group">
 
                                             <span class="input-group-addon">$</span>
-                                            <input type="text" name="total" class="form-control">
+                                            <input id="your_name" type="text" name="total" class="form-control">
                                             <span class="input-group-addon">.00</span>
-                                        
-                                            
+
+
                                         </div>
                                         <br>
                                         <button type="submit" class="btn btn-default">Submit</button>
-                                    </form>       
+                                    </form>
                                 </div>
                                 <div class="col-lg-3"></div>
                                 <!-- /.col-lg-6 (nested) -->
@@ -391,21 +392,21 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="{% static "vendor/jquery/jquery.min.js" %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{%static "vendor/bootstrap/js/bootstrap.min.js" %}"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+    <script src="{%static "vendor/metisMenu/metisMenu.min.js" %}"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="../vendor/raphael/raphael.min.js"></script>
-    <script src="../vendor/morrisjs/morris.min.js"></script>
-    <script src="../data/morris-data.js"></script>
+    <script src="{%static "vendor/raphael/raphael.min.js" %}"></script>
+    <script src="{%static "vendor/morrisjs/morris.min.js" %}"></script>
+    <script src="{%static "data/morris-data.js" %}"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="{%static "dist/js/sb-admin-2.js" %}"></script>
 
 </body>
 
