--- a/django_project/budget_buddy/templates/visualize/pages/index.html
+++ b/django_project/budget_buddy/templates/visualize/pages/index.html
@@ -11,32 +11,33 @@
 
     <title>SB Admin 2 - Bootstrap Admin Theme</title>
 
+    {% load staticfiles%}
     <!-- Bootstrap Core CSS -->
-    <link href="../vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{%static "/vendor/bootstrap/css/bootstrap.min.css" %}" rel="stylesheet">
 
     <!-- MetisMenu CSS -->
-    <link href="../vendor/metisMenu/metisMenu.min.css" rel="stylesheet">
+    <link href="{%static "/vendor/metisMenu/metisMenu.min.css" %}" rel="stylesheet">
 
     <!-- Custom CSS -->
-    <link href="../dist/css/sb-admin-2.css" rel="stylesheet">
+    <link href="{%static "/dist/css/sb-admin-2.css" %}" rel="stylesheet">
 
     <!-- Morris Charts CSS -->
-    <link href="../vendor/morrisjs/morris.css" rel="stylesheet">
+    <link href="{%static "/vendor/morrisjs/morris.css" %}" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="../vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="{%static "/vendor/font-awesome/css/font-awesome.min.css" %}" rel="stylesheet" type="text/css" %}">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js""></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
     <![endif]-->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
  <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
     <script src="http://d3js.org/d3.v3.min.js" charset="utf-8"></script>
-    <script src="../js/budget.js"></script>
-     <script src="../js/piechart.js"></script>
+    <script src="{%static "/js/budget.js" %}"></script>
+     <script src="{%static "/js/piechart.js" %}"></script>
 </head>
 
 <body>
@@ -281,7 +282,7 @@
                             <!-- /input-group -->
                         </li>
                         <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                            <a href="/index"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
                         <li>
                             <a href="#"><i class="fa fa-credit-card fa-fw"></i> Cards<span class="fa arrow"></span></a>
@@ -296,7 +297,7 @@
                             <!-- /.nav-second-level -->
                         </li>
                          <li>
-                            <a href="forms.html"><i class="fa fa-money fa-fw"></i> Plan Your Budget</a>
+                            <a href="/plan"><i class="fa fa-money fa-fw"></i> Plan Your Budget</a>
                         </li>
                     </ul>
                 </div>
@@ -313,25 +314,25 @@
                 <!-- /.col-lg-12 -->
             </div>
             <!-- /.row -->
-            
+
             <!-- /.row -->
                      <div class="col-lg-12">
             <div class = "row">
-               
+
                 <div class="col-lg-4 col-md-6">
                     <div class="panel panel-primary">
                         <a id = "present_day"href="#">
                         <div class="panel-heading">
                             <div class="row">
-                                
+
                                 <div class="col-xs-12" align="center">
                                     <div class="huge">Daily</div>
-                                   
+
                                 </div>
                             </div>
                         </div>
                     </a>
-                        
+
                             <div class="panel-footer">
                                 <a id="previous_day" href="#">
                                 <span class="pull-left"><i class="fa fa-arrow-circle-left"></i> Prev.</span>
@@ -344,22 +345,22 @@
                         </a>
                     </div>
                 </div>
-             
 
-             
-               
-             
 
-             
+
+
+
+
+
                 <div class="col-lg-4 col-md-6">
                     <div class="panel panel-yellow">
                         <a id = "present_month" href="#">
                         <div class="panel-heading">
                             <div class="row">
-                               
+
                                 <div class="col-xs-12" align="center">
                                     <div class="huge">Monthly</div>
-                                   
+
                                 </div>
                             </div>
                         </div>
@@ -374,28 +375,28 @@
                                 <div class="clearfix"></div>
 
                             </div>
-                       
+
                     </div>
                 </div>
-             
 
-             
+
+
                 <div class="col-lg-4 col-md-6">
                     <div class="panel panel-red">
                          <a href="#">
                         <div class="panel-heading">
-                           
+
                             <div class="row">
-                                
-                                
+
+
                                 <div class="col-xs-12" align="center">
                                     <div class="huge">Yearly</div>
-                                   
+
 
                                 </div>
-                               
+
                             </div>
-                        
+
                         </div>
                          </a>
                         <a href="#">
@@ -411,15 +412,15 @@
                         </a>
                     </div>
                 </div>
-             
+
          </div>
-            </div> 
+            </div>
             <br>
             <div class="row">
-                
+
                 <!-- /.col-lg-8 -->
                 <div class="col-lg-12">
-                    
+
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -428,13 +429,13 @@
                     <div class="col-lg-8 col-md-12 col-sm-12">
                         <div class="panel-body">
                             <div class="col-lg-4 col-md-12 col-sm-12">
-                               
+
                            </div>
                              <div class="col-lg-5 col-md-12 col-sm-12">
                                <div id="donut-charts"></div>
                            </div>
                             <div class="col-lg-3 col-md-12 col-sm-12">
-                               
+
                            </div>
 
                         </div>
@@ -445,31 +446,43 @@
                             <div>
                             <Strong>Comparision</Strong>
                              <div class="panel-body">
-                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
-                                
-                                <tbody>
-                                    <tr>
-                                        <td>Trident</td>
-                                        <td>Internet</td>
-                                        
-                                        
-                                    </tr>
-                                    <tr>
-                                        <td>Trident</td>
-                                        <td>Internet</td>
-                                      
-                                       
-                                    </tr>
-                                    
-                                    
-                                    
-                                </tbody>
+                            <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example1">
+
+                               <tbody>
+                                   <tr>
+                                       <td>Food</td>
+                                       <td><span><i class="fa fa-sort-asc"</i> <strong> 12.3%</strong></span></td>
+
+
+                                   </tr>
+                                   <tr>
+                                       <td>Health</td>
+                                       <td><span><i class="fa fa-sort-desc"</i> <strong> 9.84%</strong></span></td>
+
+
+                                   </tr>
+
+                                   <tr>
+                                       <td>Store/Establishment</td>
+                                       <td><span><i class="fa fa-sort-desc"</i> <strong> 2.84%</strong></span></td>
+
+
+                                   </tr>
+                                   <tr>
+                                       <td>Clothing</td>
+                                      <td><span><i class="fa fa-sort-asc"</i> <strong> 43.84%</strong></span></td>
+
+
+                                   </tr>
+
+
+                               </tbody>
                             </table>
                             <!-- /.table-responsive -->
                             <div id = "result">
-                              
+
                             </div>
-                            
+
                         </div>
 
                             </div>
@@ -477,18 +490,18 @@
                     </div>
                         <!-- /.panel-body -->
                     </div>
-                    
+
                     </div>
                     <!-- /.panel .chat-panel -->
                 </div>
-   
+
                 <!-- /.col-lg-4 -->
 <br>
         <div class="row">
-                
+
                 <!-- /.col-lg-8 -->
                 <div class="col-lg-12">
-                    
+
                     <!-- /.panel -->
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -497,7 +510,7 @@
 
         <div class="row">
                 <div class="col-lg-12">
-                    
+
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <table width="100%" class="table table-striped table-bordered table-hover" id="dataTables-example">
@@ -507,53 +520,40 @@
                                         <th>Category</th>
                                         <th>Retailer</th>
                                         <th>Amount ($)</th>
-                                        
+
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr class="odd gradeX">
-                                        <td>Trident</td>
-                                        <td>Internet</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">4</td>
-                                        
-                                    </tr>
-                                    <tr class="even gradeC">
-                                        <td>Trident</td>
-                                        <td>Internet</td>
-                                        <td>Win 95+</td>
-                                        <td class="center">5</td>
-                                       
-                                    </tr>
-                                    
-                                    
-                                    
+
+
+
+
                                 </tbody>
                             </table>
                             <!-- /.table-responsive -->
-                            
+
                         </div>
                         <!-- /.panel-body -->
-                    
+
                     <!-- /.panel -->
                 </div>
                 <!-- /.col-lg-12 -->
             </div>
                         </div>
-                    
 
-                    
+
+
                         <!-- /.panel-body -->
                     </div>
-                    
+
                 </div>
                     <!-- /.panel .chat-panel -->
         </div>
 
-           
-        
+
+
         <!-- /#page-wrapper -->
-   
+
                 <!-- /.col-lg-4 -->
         </div>
         </div>
@@ -566,21 +566,21 @@
     <!-- /#wrapper -->
 
     <!-- jQuery -->
-    <script src="../vendor/jquery/jquery.min.js"></script>
+    <script src="{%static "/vendor/jquery/jquery.min.js" %}"></script>
 
     <!-- Bootstrap Core JavaScript -->
-    <script src="../vendor/bootstrap/js/bootstrap.min.js"></script>
+    <script src="{%static "/vendor/bootstrap/js/bootstrap.min.js" %}"></script>
 
     <!-- Metis Menu Plugin JavaScript -->
-    <script src="../vendor/metisMenu/metisMenu.min.js"></script>
+    <script src="{%static "/vendor/metisMenu/metisMenu.min.js" %}"></script>
 
     <!-- Morris Charts JavaScript -->
-    <script src="../vendor/raphael/raphael.min.js"></script>
-    <script src="../vendor/morrisjs/morris.min.js"></script>
-    <script src="../data/morris-data.js"></script>
+    <script src="{%static "/vendor/raphael/raphael.min.js" %}"></script>
+    <script src="{%static "/vendor/morrisjs/morris.min.js" %}"></script>
+    <script src="{%static "/data/morris-data.js" %}"></script>
 
     <!-- Custom Theme JavaScript -->
-    <script src="../dist/js/sb-admin-2.js"></script>
+    <script src="{%static "/dist/js/sb-admin-2.js" %}"></script>
 
 </body>
 
